--- a/styles.css
+++ b/styles.css
@@ -263,20 +263,43 @@ h1 {
   margin-top: 10px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .offer-card {
   display: flex;
   border: 0.5px solid rgb(218, 218, 218);
-  max-width: 60%;
-  margin: 0px auto 20px auto;
+  width: 55%;
+  margin: 0px auto 15px auto;
   position: relative;
+
 }
+.image-rating {
+  align-self: center;
+  height: 95%;
+  width: 60%;
+}
+
+.number-of-votes {
+  margin-left: 6px;
+}
+
 .offer-image {
-  width: 20%;
-  height: 30%;
+  width: 100%;
+  height: 100%;
   margin: 10px;
   border: 1px solid rgb(218, 218, 218);
+}
+
+.checked {
+  color: orange;
+}
+
+.ratings {
+  display: flex;
+  align-self: flex-end;
+  justify-content: center;
+
 }
 
 h4 {
@@ -290,6 +313,7 @@ h4 {
 }
 
 .desc-prices {
+  margin: 15px;
   padding: 5px;
   width: 100%
 }
@@ -305,6 +329,8 @@ h4 {
   width: 100%;
   font-size: 12px;
 }
+
+
 
 .price {
   margin: 7px 0;
@@ -350,12 +376,12 @@ h4 {
 
 /* -----COMMENTS----- */
 
-.comment-section {
+.comment-container {
   display: flex; 
   flex-direction: column;
   background-color: #f2f2f2;
   min-height: 200px;
-  width: 50%;
+  width: 60%;
   margin: 0 auto;
   border-radius: 6px;
 }
@@ -371,4 +397,48 @@ h4 {
 .comment-header  {
   color: #414141;
   font-size: 15px;
+}
+
+.comment {
+  background-color:white;
+  width: 95%;
+  min-height: 70px;
+  margin: 15px;
+  border: 0.5px solid rgb(218, 218, 218);
+  display: flex;
+  border-radius: 2px;
+}
+
+.user-image {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  align-self: center;
+  margin-left: 2px;
+}
+
+
+.username-date {
+  font-size: 12px;
+  margin-right: 15px;
+  padding: 20px 0 0 10px;
+}
+
+.date {
+  font-size: 12px;
+  color:#475a86;
+  margin-left: 10px;
+}
+
+.comment-data {
+  display: flex;
+  flex-direction: column;
+}
+
+.comment-content {
+  align-self: flex-end;
+  font-size: 12px;
+  padding: 10px;
+  justify-self: start;
+  line-height: 20px;
 }
