--- a/styles.css
+++ b/styles.css
@@ -413,8 +413,8 @@ h4 {
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  align-self: center;
-  margin-left: 2px;
+  align-self: flex-start;
+  margin: 6px 0 0 3px;
 }
 
 
