--- a/styles.css
+++ b/styles.css
@@ -85,18 +85,26 @@ h1 {
 
 /* -----MODAL----- */
 
+@keyframes dropin {
+  from {transform: translateY(-100%)} 
+  to {transform: translateY(0%)}
+}
+
 .modal {
   display: none;
   position: fixed;
   z-index: 1;
-  padding-top: 100px;
+  padding-top: 150px;
   width: 100%;
   height: 100%;
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 10;
+  
 }
+
+
 
 
 
@@ -112,6 +120,7 @@ h1 {
   border-radius: 6px;
   background-color: rgb(207, 230, 251);
   padding: 2px;
+  animation: dropin 0.6s 
 }
 
 .modal-text-container {
