--- a/styles.css
+++ b/styles.css
@@ -308,7 +308,8 @@ h1 {
   display: flex;
   align-self: flex-end;
   justify-content: center;
-
+  margin-bottom: 3px;
+  height: 20px;
 }
 
 h4 {
@@ -570,6 +571,10 @@ h4 {
 
 
 @media(max-width: 450px) {
+  .green {
+    font-size: 10px;
+  }
+
   .operator {
     height: 80px;
   }
